--- a/index.html
+++ b/index.html
@@ -2,12 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🦇</text></svg>">
+    <link 
+      rel="icon" 
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🦇</text></svg>" 
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeVamp Innovations</title>
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/5hb7ie1Wo1BmOiVYLPx22r6O2AdqH/jfEx7SzB"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Bootstrap JS Bundle -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+YPLTzYt27xSmDUGjvuDaS23o/fm"
+      crossorigin="anonymous"
+    ></script>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
